// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div>
  <div
    class="sc-gzVnrw ihHoGK"
  >
    <button
      class="sc-bxivhb jBRBGM"
      size="2"
      type="button"
    />
  </div>
</div>
`;

exports[`renders medium dropdown 1`] = `
<div>
  <div
    class="sc-gzVnrw ihHoGK"
  >
    <button
      class="sc-bxivhb jBRBGM"
      size="2"
      type="button"
    >
      <p
        class="sc-bdVaJa Wzjkf"
      >
        Example
      </p>
    </button>
    <ul
      class="sc-htoDjs dyNMVF"
      data-testid="dropdown"
      size="1"
    />
  </div>
</div>
`;

exports[`renders small dropdown 1`] = `
<div>
  <div
    class="sc-gzVnrw ihHoGK"
  >
    <button
      class="sc-bxivhb jBRBGM"
      size="2"
      type="button"
    >
      <p
        class="sc-bdVaJa Wzjkf"
      >
        Example
      </p>
    </button>
    <ul
      class="sc-htoDjs kPWrFN"
      data-testid="dropdown"
    />
  </div>
</div>
`;
